--- a/OASIS TASK 2.HTML
+++ b/OASIS TASK 2.HTML
@@ -46,7 +46,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src=""C:\Users\spand\OneDrive\Desktop\photo.JPEG"alt="Spandana">
+                    <img src="C:\Users\spand\OneDrive\Desktop\pic.css""alt="Spandana">
                 </div>
                 <div class="column right">
                     <div class="text">I'm spandana I'm a Front-end Developer</div>
